--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>javascript Essentials:</h1>
     <script src="./ep-01/index.js"></script>
+    <script src="./ep-02/index.js"></script>
 </body>
 </html>
