--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>javascript Essentials:</h1>
-    <script src="./ep-01/index.js"></script>
-    <script src="./ep-02/index.js"></script>
+    <!-- <script src="./ep-01/index.js"></script> -->
+    <!-- <script src="./ep-02/index.js"></script> -->
+    <script src="./ep-03/index.js"></script>
+
 </body>
 </html>
