--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <h1>javascript Essentials:</h1>
     <!-- <script src="./ep-01/index.js"></script> -->
     <!-- <script src="./ep-02/index.js"></script> -->
-    <script src="./ep-03/index.js"></script>
+    <!-- <script src="./ep-03/index.js"></script> -->
+    <script src="./ep-04/index.js"></script>
 
 </body>
 </html>
