--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script src="./ep-02/index.js"></script> -->
     <!-- <script src="./ep-03/index.js"></script> -->
     <!-- <script src="./ep-04/index.js"></script> -->
-    <script src="./ep-05/index.js"></script>
+    <!-- <script src="./ep-05/index.js"></script> -->
+    <script src="./ep-06/index.js"></script>
 
 </body>
 </html>
