--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- <script src="./ep-05/index.js"></script> -->
     <!-- <script src="./ep-06/index.js"></script> -->
     <!-- <script src="./ep-07/index.js"></script> -->
-    <script src="./ep-08/index.js"></script>
+    <!-- <script src="./ep-08/index.js"></script> -->
+    <script src="./ep-09/index.js"></script>
 
 </body>
 </html>
